Fix style Colors changed for better contrast. Leftover previous commit.

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@
 
 @layer base {
 
+  * {
+    @apply dark:text-white
+  }
+
+  html {
+    @apply scroll-smooth
+  }
+  
   body {
     @apply dark:bg-black;
   }
